<resources>
    <string name="app_name">CodeTestingExample</string>
    <string name="first_input">First Input</string>
    <string name="second_input">Second Input</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="solution">Solution: </string>
    <string name="factorial">Factorial</string>
</resources>
