<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity">

    <data>
        <variable name="viewModel" type="com.example.codetestingexample.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/first_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.inputOne}"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:inputType="number"
                android:hint="@string/first_input"/>

        <EditText
                android:id="@+id/second_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.inputTwo}"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/first_input"
                android:inputType="number"
                android:hint="@string/second_input"/>

        <TextView
                android:id="@+id/solution_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/solution"
                android:gravity="end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintEnd_toStartOf="@+id/solution_value"
                app:layout_constraintTop_toBottomOf="@id/second_input"
                app:layout_constraintBottom_toTopOf="@+id/addition_button"/>

        <EditText
                android:id="@+id/solution_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@{viewModel.output}"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/second_input"
                app:layout_constraintBottom_toTopOf="@+id/addition_button"
                app:layout_constraintStart_toEndOf="@+id/solution_text"
                tools:text="10000"/>

        <TextView
                android:id="@+id/addition_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:onClick="@{() -> viewModel.add()}"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintEnd_toStartOf="@+id/sub_button"/>

        <TextView
                android:id="@+id/sub_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtract"
                android:onClick="@{() -> viewModel.subtract()}"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
                app:layout_constraintStart_toEndOf="@+id/addition_button"
                app:layout_constraintEnd_toStartOf="@+id/multiply_button"/>

        <TextView
                android:id="@+id/multiply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:onClick="@{() -> viewModel.multiply()}"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
                app:layout_constraintStart_toEndOf="@+id/sub_button"
                app:layout_constraintEnd_toStartOf="@+id/divide_button"/>

        <TextView
                android:id="@+id/divide_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:onClick="@{() -> viewModel.divide()}"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
                app:layout_constraintStart_toEndOf="@+id/multiply_button"
                app:layout_constraintEnd_toEndOf="@+id/factorial_button"/>

        <TextView
                android:id="@+id/factorial_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/factorial"
                android:onClick="@{() -> viewModel.factorial()}"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
                app:layout_constraintStart_toEndOf="@+id/divide_button"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".9"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".05"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".95"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>